<resources>
    <string name="app_name">code</string>
    <string name="subjects">Subjects</string>
    <string name="subjects_selection">Subjects Selection</string>
    <string name="demo_selection">Demo Selection</string>
    <string name="publish_subject">Publish Subject</string>
    <string name="publish_item">Publish Item</string>
    <string name="subscriber_1">Subscriber-1</string>
    <string name="subscriber_2">Subscrier-2</string>
    <string name="behaviour_subject">Behaviour Subject</string>
    <string name="replay_subject">Replay Subject</string>
    <string name="async_subject">Async Subject</string>
    <string name="subject_operators">Subject Operators</string>
    <string name="android_demo_1">Android Demo</string>
    <string name="photo_collage_demo">Photo Collage Demo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="bottom_sheet_option_camera">Use Camera</string>
    <string name="bottom_sheet_option_gallery">Upload from Gallery</string>
    <string name="bottom_sheet_option_heading">Add Photo</string>
    <string name="bottom_sheet_option_remove_photo">Remove Photo</string>
    <string name="photo">photo</string>
    <string name="selected_image">Selected Image</string>
    <string name="collage">Collage</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="collage_demo">Collage Demo</string>
    <string name="special_observables">Special Observables</string>
    <string name="completable_observable">Completable Observable</string>
    <string name="maybe_observable">Maybe Observable</string>
    <string name="special_observable">Special Observable Demos</string>
    <string name="single_observable">Single Observable Demo</string>
    <string name="completable_observe">Completable Observable Demo</string>
    <string name="maybe_observe">Maybe Observable Demo</string>
    <string name="publish_error">Error</string>
    <string name="publish_complete">Complete</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribe_for_success">Subscribe for success</string>
    <string name="subscribe_for_failure">Subscribe for failure</string>
    <string name="subscribe_for_completion">Subscribe for completion</string>
    <string name="operators">Operators</string>
    <string name="operators_selection">Operators Selection</string>
    <string name="filter_operators">Filter Operators</string>
    <string name="transforming_operators">Transforming Operators</string>
    <string name="combining_operators">Combining Operators</string>
    <string name="filter_operators_selection">Filter Operators Selection</string>
    <string name="distinct_until_changed_normal">Distinct Until Changed Normal</string>
    <string name="distinct_until_changed_custom">Distinct Until Changed Custom</string>
    <string name="initiate">initiate</string>
    <string name="transform_operators_selection">Transform Operators Selection</string>
    <string name="flat_map_operator">Flat map operator</string>
    <string name="switch_map_operator">Switch map operator</string>
    <string name="flat_map_activity">FlatMap operator</string>
    <string name="switch_map_activity">SwitchMap operator</string>
    <string name="materialize_operator">Materialize Operator</string>
    <string name="git_feed">Git Feed</string>
    <string name="avatar">Avatar</string>
    <string name="repoAction">%1$s, %2$s</string>
    <string name="git_feed_demo">GitFeed Demo</string>
    <string name="start_with">Start With</string>
    <string name="concat">Concat</string>
    <string name="concat_with">Concat With</string>
    <string name="concat_map">Concat Map</string>
    <string name="merge">Merge</string>
    <string name="combining_operators_selection">Combining operators selection</string>
    <string name="starts_with_demo">Starts With Demo</string>
    <string name="concat_demo">Concat Demo</string>
    <string name="concat_with_demo">ConcatWith Demo</string>
    <string name="concat_map_demo">ConcatMap Demo</string>
    <string name="merge_demo">Merge Demo</string>
    <string name="left_observable">Left Observable</string>
    <string name="right_observable">right Observable</string>
    <string name="enter_data_for_adding">Enter data for publishing</string>
</resources>