<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding">

    <Button
        android:id="@+id/btnFlatMapOperatorId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flat_map_operator" />

    <Button
        android:id="@+id/btnSwitchMapOperatorId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_map_operator" />

    <Button
        android:id="@+id/btnMaterializeOperatorId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/materialize_operator" />

    <View
        android:id="@+id/spaceId"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_width"
        android:gravity="center"
        android:textSize="@dimen/header_size"
        android:layout_marginBottom="@dimen/screen_padding"
        android:text="@string/subject_operators" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/header_size"
        android:layout_marginBottom="@dimen/screen_padding"
        android:text="@string/android_demo_1" />

    <Button
        android:id="@+id/btnGitFeedId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/git_feed" />


</LinearLayout>