<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/header_size"
        android:layout_marginBottom="@dimen/screen_padding"
        android:text="@string/subject_operators" />

    <Button
        android:id="@+id/btnPublishSubjectId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publish_subject" />

    <Button
        android:id="@+id/btnBehaviourSubjectId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/behaviour_subject" />

    <Button
        android:id="@+id/btnReplaySubjectId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/replay_subject" />

    <Button
        android:id="@+id/btnAsyncSubjectId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/async_subject" />

    <View
        android:id="@+id/spaceId"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_width"
        android:gravity="center"
        android:textSize="@dimen/header_size"
        android:layout_marginBottom="@dimen/screen_padding"
        android:text="@string/subject_operators" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/header_size"
        android:layout_marginBottom="@dimen/screen_padding"
        android:text="@string/android_demo_1" />

    <Button
        android:id="@+id/btnPhotoCollageDemoId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photo_collage_demo" />


</LinearLayout>