<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding">


    <Button
        android:id="@+id/btnPublishId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publish_item" />

    <Button
        android:id="@+id/btnSubscriberOneId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subscriber_1" />

    <Button
        android:id="@+id/btnSubscriberTwoId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subscriber_2" />

</LinearLayout>