<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding">

    <Button
        android:id="@+id/btnSuccessId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subscribe_for_success" />

    <Button
        android:id="@+id/btnFailureId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subscribe_for_failure" />

    <Button
        android:id="@+id/btnCompletionId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subscribe_for_completion" />

</LinearLayout>