<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding">

    <Button
        android:id="@+id/btnSuccessId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subscribe_for_success" />

    <Button
        android:id="@+id/btnFailureId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subscribe_for_failure" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="horizontal"
        android:padding="@dimen/screen_padding">

        <Button
            android:id="@+id/btnPublishErrorId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/publish_error" />

        <View
            android:layout_width="5dp"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/btnPublishCompleteId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/publish_complete" />
    </LinearLayout>

</LinearLayout>