<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding">

    <Button
        android:id="@+id/btnSingleObservableId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/single_observable" />

    <Button
        android:id="@+id/btnCompletableObservableId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/completable_observable" />

    <Button
        android:id="@+id/btnMaybeObservableId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/maybe_observable" />

</LinearLayout>