<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="@dimen/screen_padding"
    tools:context=".operators.OperatorsSelectionActivity">

    <LinearLayout
        android:id="@+id/containerId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:id="@+id/filterOperatorsId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_operators" />
        <Button
            android:id="@+id/transformingOperatorsId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transforming_operators" />
        <Button
            android:id="@+id/combiningOperatorsId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/combining_operators" />
    </LinearLayout>

</ScrollView>

